--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,8 +3,12 @@
 <br>
 
 <%= @category.supplies.each do |supply|%>
-<h4> <%= supply.name %> </h4>
+<h3> <%= "#{supply.name} | #{supply.amount_to_goal}" %> </h3>
 <p> Price: <%= supply.price%> </p>
 <p> Quantity: <%= supply.quantity %> </p>
-<p> Description: <%= supply.description%> </p> 
+<p> Description: <%= supply.description%> </p>
+<%= form_for supply do |f|%>
+  <%= f.text_field :donations%>
+  <%=f.submit "Donate now!"%>
+  <%end%>
 <%end%>
