--- a/app/views/supplies/new.html.erb
+++ b/app/views/supplies/new.html.erb
@@ -11,7 +11,9 @@
 <%= f.text_field :quantity %> <br><br>
 <%= f.label :description %>
 <%= f.text_area :description %> <br><br>
+<% if !params[:category_id]%>
 <%= f.label :category %>
 <%= f.collection_select(:category_id, Category.all, :id, :name)%><br><br>
+<%end%> 
 <%= f.submit "Add Supply"%>
 <%end%>
