made partial for supply form, added policy for supply update

--- a/app/views/supplies/new.html.erb
+++ b/app/views/supplies/new.html.erb
@@ -1,17 +1,8 @@
 
 <h1> Need a New Supply? </h1>
 
+<%= render 'form'%>
 
-<%= form_for @supply do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name%> <br><br>
-<%= f.label :price%>
-<%= f.text_field :price %> <br><br>
-<%= f.label :quantity %>
-<%= f.text_field :quantity %> <br><br>
-<%= f.label :description %>
-<%= f.text_area :description %> <br><br>
-<%= f.hidden_field :user_id, value: current_user.id%>
 <% if !params[:category_id]%>
 <%= f.label :category %>
 <%= f.collection_select(:category_id, Category.all, :id, :name)%><br><br>
