--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,28 @@
  *= require_tree .
  *= require_self
  */
+
+
+ ul {
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+     overflow: hidden;
+     background-color: #333;
+ }
+
+
+
+ li {
+     float: left;
+     color: white;
+     text-align: center;
+     text-size: 30px;
+     padding: 20px 30px;
+     margin-left: 20px;
+     text-decoration: none;
+ }
+
+ li a {
+   color: white;
+ }
