--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <ul>
+    <li> <%= link_to "Home", categories_path%> </li>
+    <%if current_user.admin?%>
+    <li> <%= link_to "Add a Supply", new_supply_path%> </li>
+    <%end%>
+    <% if current_user%>
+      <li> Signed in as <%=current_user.email%> </li>
+      <li> <%=link_to "Sign Out", destroy_user_session_path%> </li>
+    <%else%>
+      <li><%= link_to "Sign Up", new_user_registration_path%></li>
+      <li> <%= link_to "Sign In", new_user_session_path%>></li>
+    <%end%>
+  </ul>
 <%= yield %>
 
 </body>
