--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,11 +30,18 @@
      color: white;
      text-align: center;
      text-size: 30px;
-     padding: 20px 30px;
+     padding: 15px 20px;
      margin-left: 20px;
      text-decoration: none;
  }
 
  li a {
    color: white;
+   text-decoration: none;
+ }
+
+ h1 {
+   text-align: center;
+   text-size: 50px; 
+
  }
