--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
 <p> Quantity: <%= supply.quantity %> </p>
 <p> Description: <%= supply.description%> </p>
 <%= form_for supply, url: category_supply_donate_path(@category,supply) do |f|%>
-  <%= f.text_field :donations%>
-  <%=f.submit "Donate now!"%>
+  <p><%= f.text_field :donations%>
+  <%=f.submit "Donate now!"%></p>
   <%end%>
 <%end%>
