--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @supply do |f|%> 
-<%= f.label :name %>
+<%= form_for @supply do |f|%>
+<p><%= f.label :name %>
 <%= f.text_field :name%> <br><br>
 <%= f.label :price%>
 <%= f.text_field :price %> <br><br>
@@ -14,5 +14,5 @@
 <%else%>
 <%= f.hidden_field :category_id, value: params[:category_id]%>
 <%end%>
-<%= f.submit%>
+<%= f.submit%></p>
 <%end%>
