have to login to see categories show page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,3 +12,8 @@
   <%=f.submit "Donate now!"%></p>
   <%end%>
 <%end%>
+
+
+<%if current_user.admin?%>
+  <h3> <%= link_to "Add a new supply", new_supply_path%> </h3>
+<%end%>
