--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @supply do |f|%>
+<%= form_for @supply, url: category_supplies_path(params[:category_id]) do |f|%>
 <p><%= f.label :name %>
 <%= f.text_field :name%> <br><br>
 <%= f.label :price%>
