added errors to form when not valid

--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -1,3 +1,19 @@
+
+<% if @supply.errors.any?%>
+  <div id = "error_explanation">
+    <h3> <%= pluralize(@supply.errors.count, "error")%>
+      prohibited this supply from being saved. Please try again.</h2>
+
+      <br>
+      <ul>
+      <% @supply.errors.full_messages.each do |error|%>
+        <li><%= error %> </li> <br>
+      <%end%>
+      <ul>
+      </div> 
+
+
+
 <%= form_for @supply, url: category_supplies_path(params[:category_id]) do |f|%>
 <p><%= f.label :name %>
 <%= f.text_field :name%> <br><br>
