forgot end, css for errors class

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,12 +41,14 @@
  }
 
  h1 {
-   text-align: center;
    text-size: 50px;
 
  }
 
-h3, p {
-  text-align: center;
+.error_explanation {
+  color: red;
+  background-color: white;
+  
+
 
 }
