--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -10,8 +10,8 @@
         <li><%= error %> </li> <br>
       <%end%>
       <ul>
-      </div> 
-
+      </div>
+    <%end%> 
 
 
 <%= form_for @supply, url: category_supplies_path(params[:category_id]) do |f|%>
