--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <li> <%=link_to "Sign Out", destroy_user_session_path%> </li>
     <%else%>
       <li><%= link_to "Sign Up", new_user_registration_path%></li>
-      <li> <%= link_to "Sign In", new_user_session_path%>></li>
+      <li> <%= link_to "Sign In", new_user_session_path%></li>
     <%end%>
   </ul>
 <%= yield %>
