--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,8 @@
 <p> Price: <%= supply.price%> </p>
 <p> Quantity: <%= supply.quantity %> </p>
 <p> Description: <%= supply.description%> </p>
-<%= edit_or_delete(@category, supply)%> 
+<%= edit_supply(@category, supply)%>
+<%= delete_supply(@category,supply)%> 
 <%= form_for supply, url: category_supply_donate_path(@category,supply) do |f|%>
   <p><%= f.text_field :donations%>
   <%=f.submit "Donate now!"%></p>
