--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -1,20 +1,7 @@
 
-<% if @supply.errors.any?%>
-  <div id = "error_explanation">
-    <h3> <%= pluralize(@supply.errors.count, "error")%>
-      prohibited this supply from being saved. Please try again.</h2>
-
-      <ul>
-      <% @supply.errors.full_messages.each do |error|%>
-        <li><%= error %> </li> <br>
-      <%end%>
-      <ul>
-      </div>
-    <%end%>
 
 
-
-<p><%= f.label :name %>
+<%= f.label :name %>
 <%= f.text_field :name%> <br><br>
 <%= f.label :price%>
 <%= f.text_field :price %> <br><br>
@@ -24,4 +11,4 @@
 <%= f.text_area :description %> <br><br>
 <%= f.hidden_field :user_id, value: current_user.id%>
 <%= f.hidden_field :category_id, value: params[:category_id]%>
-<%= f.submit%></p>
+<%= f.submit%>
