--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,13 +2,13 @@
 
 <br>
 
-<%= @category.supplies.each do |supply|%>
-<h3> <%= "#{supply.name} | #{amount_to_goal(supply)}" %> </h3>
+<%= Supply.most_donations(@category).each do |supply|%>
+<h3> <%= "#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(goal(supply))} raised." %> </h3>
 <p> Price: <%= supply.price%> </p>
 <p> Quantity: <%= supply.quantity %> </p>
 <p> Description: <%= supply.description%> </p>
 <%= edit_supply(@category, supply)%>
-<%= delete_supply(@category,supply)%> 
+<%= delete_supply(@category,supply)%>
 <%= form_for supply, url: category_supply_donate_path(@category,supply) do |f|%>
   <p><%= f.text_field :donations%>
   <%=f.submit "Donate now!"%></p>
