--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
 <br>
 
 <%= Supply.most_donations(@category).each do |supply|%>
-<h3> <%= "#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(goal(supply))} raised." %> </h3>
+<h3> <%= "#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(supply.goal)} raised." %> </h3>
 <p> Price: <%= supply.price%> </p>
 <p> Quantity: <%= supply.quantity %> </p>
 <p> Description: <%= supply.description%> </p>
