--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,11 +3,6 @@
 <h1> <%= @category.name%> </h1>
 <br>
 
-
-  <% @category.supplies.each do |supply|%>
-    <% @supply = supply%>
-    <%= render partial: 'supplies/errors'%>
-  <%end%>
 <br>
 
 <% Supply.most_donations(@category).each do |supply|%>
@@ -21,7 +16,7 @@
   <%end%>
 
 <%= form_for supply, url: category_supply_donate_path(@category,supply) do |f|%>
-  <p><%= f.text_field :donations%>
+  <p><%= f.text_field :donations, value: "0"%>
   <%=f.submit "Donate now!"%></p>
   <%end%>
 <%end%>
