--- a/app/views/supplies/show.html.erb
+++ b/app/views/supplies/show.html.erb
@@ -3,10 +3,7 @@
 
   <h3> If you'd like to try donating again: </h3>
   <br>
-  <%= form_for @supply, url: category_supply_donate_path(@category,@supply) do |f|%>
-    <p><%= f.text_field :donations, value: "0"%>
-    <%=f.submit "Donate now!"%></p>
-    <%end%>
+  <%= render partial: 'donate', locals:{supply:@supply}%>
   <%else%>
 
     <h1> Thank you for donating towards: <bold> <%= @supply.name%> </bold>  </h1>
