--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+h3 {
+  font-family: 'Abel', sans-serif;
+  font-size: 30px;
+  color: #004d99;
+
+}
+
+p{
+font-family:'Rajdhani', cursive;
+font-size: 25px;
+color: #00b3b3;
+
+
+}
