--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -4,16 +4,30 @@
 
 
 h3 {
-  font-family: 'Abel', sans-serif;
-  font-size: 30px;
+  font-family: "Rock Salt", cursive;
+  font-size: 35px;
   color: #004d99;
+  margin-left: 20px;
 
 }
 
 p{
-font-family:'Rajdhani', cursive;
-font-size: 25px;
-color: #00b3b3;
+font-family: 'IBM Plex Sans Condensed', sans-serif;
+font-size: 20px;
+color: black;
+margin-left: 20px;
+
+
+}
+h4 {
+   font-family: 'IBM Plex Sans Condensed', sans-serif;
+   font-size: 30px;
+   margin-left: 20px;
+}
+
+.buttons { 
+   font-family: 'IBM Plex Sans Condensed', sans-serif;
+
 
 
 }
