--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,13 +6,13 @@
 <br>
 
 <% Supply.most_donations(@category).each do |supply|%>
-<h3> <%= "#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(supply.goal)} raised." %> </h3> <br>
+<h4> <%= "#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(supply.goal)} raised." %> </h4> <br>
 <p> Price per Item: <%= number_to_currency(supply.price)%> </p>
 <p> Quantity needed: <%= supply.quantity %> </p>
 <p> Description: <%= supply.description%> </p>
   <% if current_user.id == supply.user_id%>
-    <%= link_to "Edit", edit_category_supply_path(@category, supply)%>
-    <%= link_to "Delete", category_supply_destroy_path(@category, supply), method: :delete, data: { confirm: "Are you sure?" }%>
+    <p><%= link_to "Edit", edit_category_supply_path(@category, supply)%></p>
+    <p><%= link_to "Delete", category_supply_destroy_path(@category, supply), method: :delete, data: { confirm: "Are you sure?" }%></p>
   <%end%>
 
 
