--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -12,7 +12,7 @@ h3 {
 }
 
 p{
-font-family: 'IBM Plex Sans Condensed', sans-serif;
+
 font-size: 20px;
 color: black;
 margin-left: 20px;
@@ -20,14 +20,22 @@ margin-left: 20px;
 
 }
 h4 {
-   font-family: 'IBM Plex Sans Condensed', sans-serif;
+
    font-size: 30px;
    margin-left: 20px;
 }
 
-.buttons { 
-   font-family: 'IBM Plex Sans Condensed', sans-serif;
+.buttons {
 
 
 
+
+}
+#error_explanation{
+
+  color: red;
+}
+
+body{
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
 }
