--- a/app/views/supplies/_errors.html.erb
+++ b/app/views/supplies/_errors.html.erb
@@ -1,9 +1,9 @@
 
 <% if @supply.errors.any?%>
 
-  <div id = "error_explanation">
-    <h3> <%= pluralize(@supply.errors.count, "error")%>
-      prohibited this supply from being saved. Please try again.</h2>
+  <div id= "error_explanation">
+    <h2> <%= pluralize(@supply.errors.count, "error")%> occurred regarding <%=@supply.name%>.
+       Please try again.</h2>
 
       <ul>
       <% @supply.errors.full_messages.each do |error|%>
