--- a/app/views/supplies/_errors.html.erb
+++ b/app/views/supplies/_errors.html.erb
@@ -1,7 +1,7 @@
 
 <% if @supply.errors.any?%>
 
-  <div id= "error_explanation">
+  <div class= "error_explanation">
     <h2> <%= pluralize(@supply.errors.count, "error")%> occurred regarding <%=@supply.name%>.
        Please try again.</h2>
 
