--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,5 +4,27 @@
 
 <% @categories.each do |category|%>
 <h3> <%= category.name %> </h3>
-    <p><%= link_to "See More", category_path(category)%></p><br>
+<div id="suppliesList">
+</div>
+<button class="js-more" data-id="<%=category.id%>">See <%= category.name%></button>
+
 <%end%>
+
+
+
+<script type="text/javascript" charset="utf-8">
+$(function(){
+  $(".js-more").on("click", function(){
+    var id= $(this).data("id");
+    $.get("/categories/" + id + "/supplies_data", function(data) {
+      var supplies = data ;
+      var list = document.getElementById("suppliesList")
+      list.innerHTML ="<ul>"
+      supplies.forEach(function(supply){
+        list.innerHTML+="<li>" + supply.name + " | " + supply.price + " | <button> See More Information </button> </li><br>"
+      });
+    });
+  });
+});
+
+</script>
