--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @categories.each do |category|%>
 <h3> <%= category.name %> </h3>
-<div id="suppliesList">
+<div id="category-supplies-<%=category.id%>">
 </div>
 <button class="js-more" data-id="<%=category.id%>">See <%= category.name%></button>
 
@@ -18,7 +18,7 @@ $(function(){
     var id= $(this).data("id");
     $.get("/categories/" + id + "/supplies_data", function(data) {
       var supplies = data ;
-      var list = document.getElementById("suppliesList")
+      var list = document.getElementById("category-supplies-" + id)
       list.innerHTML ="<ul>"
       supplies.forEach(function(supply){
         list.innerHTML+="<li>" + supply.name + " | " + supply.price + " | <button> See More Information </button> </li><br>"
