--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,7 +6,8 @@
 <h3> <%= category.name %> </h3>
 <div id="category-supplies-<%=category.id%>">
 </div>
-<button class="js-more" data-id="<%=category.id%>">See <%= category.name%></button>
+<button id = "seeMore" class="js-more" data-id="<%=category.id%>">See <%= category.name%></button>
+<button> <a href="<%=category_path(category)%>"</a>Donate towards <%= category.name%> </button> 
 
 <%end%>
 
@@ -21,10 +22,11 @@ $(function(){
       var list = document.getElementById("category-supplies-" + id)
       list.innerHTML ="<ul>"
       supplies.forEach(function(supply){
-        list.innerHTML+="<li>" + supply.name + " | " + supply.price + " | <button> See More Information </button> </li><br>"
+        list.innerHTML+='<li>' + supply.name + ' | ' + supply.price + '| </li><br>'
       });
+
     });
   });
-});
 
+})
 </script>
