--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,12 @@
  .error_explanation {
    color: red;
    background-color: white;
+   border: dotted;
+   border-color: black;
+   width: 500px;
+   border-radius: 4px;
+   margin: 40px auto;
+   text-align: center;
 
 
 
@@ -37,7 +43,6 @@
 
 
 
-
  .header-list{
      float: left;
      color: white;
@@ -52,13 +57,17 @@
  li a {
    color: white;
    text-decoration: none;
+
+ }
+ ul {
+   list-style: none;
  }
 
  h1 {
    margin-top: 40px;
    text-align: center;
    font-family: "Shadows Into Light", cursive;
-   font-size: 70px;
+   font-size: 120px;
    color: 	 #004d99;
 
  }
