--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -5,7 +5,7 @@
 
 h3 {
   font-family: "Shadows Into Light", cursive;
-  font-size: 45px;
+  font-size: 60px;
   color: #004d99;
   margin-left: 20px;
 
@@ -18,15 +18,17 @@ color: black;
 margin-left: 20px;
 
 
+
 }
 h4 {
 
-   font-size: 30px;
+   font-size: 40px;
    margin-left: 20px;
+
 }
 
-.buttons {
-
+button {
+  margin-left: 30px;
 
 
 
@@ -35,4 +37,5 @@ h4 {
 
 body{
   font-family: 'Amatic SC', cursive;
+
 }
