--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1> Tools For School </h1>
+<h1 id="toolsforschool"> Tools For School </h1>
 
 
 <% @categories.each do |category|%>
@@ -22,7 +22,7 @@ $(function(){
       var supplies = data ;
       var list = document.getElementById("category-supplies-" + id)
       supplies.forEach(function(supply){
-        list.innerHTML+='<p>' + supply.name + ' | $' + supply.price + ' | </p><button id="seeSupply" data-categoryId="' + id +'" data-id="' + supply.id +'">More</button><br>'
+        list.innerHTML+='<p>' + supply.name + ' | $' + supply.price + ' <br> <div id="supply-div" data-supplyId="'+ supply.id +'"></div></p><button id="seeSupply" data-categoryId="' + id +'" data-id="' + supply.id +'">More</button><br>'
       });
 
     });
