--- a/app/views/supplies/show.html.erb
+++ b/app/views/supplies/show.html.erb
@@ -10,13 +10,13 @@
 
 <%end%>
 
-  <h1> <%=@supply.name%> || <%= number_to_currency(@supply.donations)%> out of <%= number_to_currency(@supply.goal)%> donated! </h1><br>
+  <h1> <%=@supply.name%> || <%= number_to_currency(@supply.donations)%> out of <%= number_to_currency(@supply.goal)%> donated! </h1>
   <h3> Price: <%= number_to_currency(@supply.price)%></h3> <br>
   <p> Quantity needed: <%= @supply.quantity%> </p> <br>
   <p> Description: <%= @supply.description%> </p> <br>
 
 
-<%=link_to "Click here to go back to #{@supply.category.name}", category_path(@supply.category)%>
+<h3> <%=link_to "Click here to go back to #{@supply.category.name}", category_path(@supply.category)%></h3>
 
 <br>
 
