--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,21 +3,33 @@
 <h1> <%= @category.name%> </h1>
 <br>
 
-<% Supply.most_donations(@category).each do |supply|%>
-<h4> <bold><%="#{supply.name} | #{number_to_currency(supply.donations)} out of #{number_to_currency(supply.goal)} raised." %></bold> </h4> <br>
-<p> Price per Item: <%= number_to_currency(supply.price)%> </p>
-<p> Quantity needed: <%= supply.quantity %> </p>
-<p> Description: <%= supply.description%> </p>
-  <% if current_user.id == supply.user_id%>
-    <p><%= link_to "Edit", edit_category_supply_path(@category, supply)%></p>
-    <p><%= link_to "Delete", category_supply_destroy_path(@category, supply), method: :delete, data: { confirm: "Are you sure?" }%></p>
-  <%end%>
+  <div class="supply-info">
+  <h4> <bold><%="#{@supply.name} | #{number_to_currency(@supply.donations)} out of #{number_to_currency(@supply.goal)} raised." %></bold> </h4> <br>
+  <p> Price per Item: <%= number_to_currency(@supply.price)%> </p>
+  <p> Quantity needed: <%= @supply.quantity %> </p>
+  <p> Description: <%= @supply.description%> </p>
+    <% if current_user.id == @supply.user_id%>
+      <p><%= link_to "Edit", edit_category_supply_path(@category, @supply)%></p>
+      <p><%= link_to "Delete", category_supply_destroy_path(@category, @supply), method: :delete, data: { confirm: "Are you sure?" }%></p>
+    <%end%>
+  </div>
+
+  <button class="next-supply">NEXT </button>
 
 
-  <%= render partial: 'supplies/donate', locals: {supply:supply}%>
 
-<%end%>
+
+
+  <%= render partial: 'supplies/donate', locals: {supply:@supply}%>
+
 
 <%if current_user.admin?%>
   <h4> <%= link_to "Add a new supply", new_category_supply_path(@category.id)%> </h4>
 <%end%>
+
+
+<script type = "text/javascript" charset = "utf-8">
+  $(function(){
+
+  })
+</script>
