added next and previous buttons and implemented DRYer code

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -30,20 +30,18 @@
 
 <script type = "text/javascript" charset = "utf-8">
   $(function(){
-    $(".next-category").on("click", function(){
-      var categoryId = parseInt($(".next-category").attr("data-id")) + 1;
+    $(".next-category, .prev-category").on("click", function(){
+      if($(this).attr("class") === "next-category"){
+        var categoryId = parseInt($(".next-category").attr("data-id")) + 1;
+      }
+      else{
+        var categoryId = parseInt($(".prev-category").attr('data-id')) -1;
+      }
+      /*must disable button for previous/next on first and last elements*/
       $.get("/categories/" + categoryId + ".json", function(data){
         $(".category-name").text(data["name"])
         $(".next-category").attr("data-id", data["id"])
         $(".prev-category").attr("data-id", data["id"])
-      })
-    })
-    $(".prev-category").on("click", function(){
-      var prevId = parseInt($(".prev-category").attr('data-id')) -1;
-      $.get("/categories/" + prevId + ".json", function(data){
-        $(".category-name").text(data["name"]);
-        $(".prev-category").attr("data-id", data["id"])
-        $(".next-category").attr("data-id", data["id"])
       })
     })
   })
