--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,12 +2,13 @@
 
 <h1 class="category-name"> <%= @category.name%> </h1> <br>
 <button class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
-<br>
+<br><br>
 
+<button class="next-supply" data-id="<%=@category.id%>"> Next Supply </button>
   <div class="supply-info">
-  <h4 class="supply-heading"> <bold><%="#{@supply.name} | #{number_to_currency(@supply.donations)} out of #{number_to_currency(@supply.goal)} raised." %></bold> </h4> <br>
-  <p class="supply-price"> Price per Item: <%= number_to_currency(@supply.price)%> </p>
-  <p class="supply-quantity"> Quantity needed: <%= @supply.quantity %> </p>
+  <h4 class="supply-heading"> hi</h4> <br>
+  <p class="supply-price"> </p>
+  <p class="supply-quantity"> </p>
   <p class="supply-description"> Description: <%= @supply.description%> </p>
     <% if current_user.id == @supply.user_id%>
       <p><%= link_to "Edit", edit_category_supply_path(@category, @supply)%></p>
@@ -42,6 +43,17 @@
         $(".category-name").text(data["name"])
         $(".next-category").attr("data-id", data["id"])
         $(".prev-category").attr("data-id", data["id"])
+      })
+    })
+    $(".next-supply").on("click", function(){
+      var id = $(this).attr("data-id")
+      $.get("/categories/" + id + ".json", function(data){
+        let i = 0;
+        var supplies = data.supplies
+        console.log(supplies)
+        $(".supply-heading").text(supplies[i].name)
+        $(".supply-price").text(supplies[i].price);
+        $(".supply-quantity").text(supplies[i].quantity)
       })
     })
   })
