--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 
 
 <h1 class="category-name"> <%= @category.name%> </h1> <br>
-<button class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
+<button class = "prev-category" data-id="<%=@category.id%>" data-userid="<%=current_user.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
 <br><br>
 
 <button class="next-supply" data-id="<%=@category.id%>"> Next Supply </button>
@@ -9,7 +9,7 @@
   <h4 class="supply-heading"> hi</h4> <br>
   <p class="supply-price"> </p>
   <p class="supply-quantity"> </p>
-  <p class="supply-description"> Description: <%= @supply.description%> </p>
+  <p class="supply-description"></p>
     <% if current_user.id == @supply.user_id%>
       <p><%= link_to "Edit", edit_category_supply_path(@category, @supply)%></p>
       <p><%= link_to "Delete", category_supply_destroy_path(@category, @supply), method: :delete, data: { confirm: "Are you sure?" }%></p>
@@ -45,15 +45,17 @@
         $(".prev-category").attr("data-id", data["id"])
       })
     })
+    let i = 0; /* in order to go through all of the supplies in the JSON */
     $(".next-supply").on("click", function(){
       var id = $(this).attr("data-id")
       $.get("/categories/" + id + ".json", function(data){
-        let i = 0;
         var supplies = data.supplies
-        console.log(supplies)
         $(".supply-heading").text(supplies[i].name)
         $(".supply-price").text(supplies[i].price);
-        $(".supply-quantity").text(supplies[i].quantity)
+        $(".supply-quantity").text(supplies[i].quantity);
+        $(".supply-description").text(supplies[i].description)
+        $(".next-supply").attr("data-id", supplies[i].id)
+        i+=1
       })
     })
   })
