--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
   <ul class = "header">
     <li class = "header-list"> <%= link_to "Tools For School Home", root_path%> </li>
-    <%if @category && current_user.admin?%>
-      <li class="header-list"> <%=link_to "Add Supply", new_category_supply_path(@category.id)%></li>
+    <%if current_user.admin?%>
+      <li class="header-list"> </li>
     <%end%>
     <% if current_user%>
       <li class = "header-list"> Signed in as <%=current_user.email%> </li>
