--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,9 @@
 
-<h2> <%= @user.email%> </h2>
+<h2> Hello, <%= @user.email%>! </h2>
+
+<h4> Here's a list of the supplies you've added to <bold> Tools for School</bold></h4>
+
+
+<% @user.supplies each do |supply| %>
+<h3> <%= supply.name%> </h3>
+<%end%> 
