--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -9,6 +9,8 @@
 <%= f.text_field :quantity %> <br><br>
 <%= f.label :description %>
 <%= f.text_area :description %> <br><br>
+<%= f.label "Category"%>
+<%= f.collection_select :category_id, @categories, :id, :name%><br><br>
 <%= f.hidden_field :user_id, value: current_user.id%>
 <%= f.hidden_field :category_id, value: params[:category_id]%>
 <%= f.submit%>
