--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
 <button class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
 <br><br>
 
-<button class="next-supply" data-id="<%=@category.id%>"data-userid="<%=@user.id%>"> Next Supply </button>
+<button class="next-supply" supplyData-id="1" data-id="<%=@category.id%>"data-userid="<%=@user.id%>"> Next Supply </button>
   <div class="supply-info">
   <h4 class="supply-heading"> hi</h4> <br>
   <p class="supply-price"> </p>
@@ -41,8 +41,9 @@
       }
       /*must disable button for previous/next on first and last elements*/
       $.get("/categories/" + categoryId + ".json", function(data){
-
+        console.log(data)
         $(".category-name").text(data["name"])
+        $("next-supply").attr("data-id", categoryId)
         $(".next-category").attr("data-id", data["id"])
         $(".prev-category").attr("data-id", data["id"])
       })
@@ -57,7 +58,7 @@
         $(".supply-price").text(supplies[i].price);
         $(".supply-quantity").text(supplies[i].quantity);
         $(".supply-description").text(supplies[i].description)
-        $(".next-supply").attr("data-id", supplies[i].id)
+        $(".next-supply").attr("supplyData-id", supplies[i].id)
         if(user === supplies.user_id){
           $(".edit-delete-supply").text("<a>hi</a>")
         }
