--- a/app/views/supplies/_form.html.erb
+++ b/app/views/supplies/_form.html.erb
@@ -10,7 +10,6 @@
 <%= f.label :description %>
 <%= f.text_area :description %> <br><br>
 <%= f.label "Category"%>
-<%= f.collection_select :category_id, @categories, :id, :name%><br><br>
+<%= f.collection_select :id, @categories, :id, :name%><br><br>
 <%= f.hidden_field :user_id, value: current_user.id%>
-<%= f.hidden_field :category_id, value: params[:category_id]%>
 <%= f.submit%>
