--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 
 
 <h1 class="category-name"> <%= @category.name%> </h1> <br>
-<button class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
+<button disabled class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" data-id="<%=@category.id%>"> Next Category</button>
 <br><br>
 
 <button class="next-supply" supplyData-id="1" data-id="<%=@category.id%>"data-userid="<%=@user.id%>"> Next Supply </button>
@@ -40,11 +40,16 @@
         var categoryId = parseInt($(".prev-category").attr('data-id')) -1;
       }
       /*must disable button for previous/next on first and last elements*/
+      if($(this).attr("data-id") === 1){
+        $(".prev-category").disabled = true
+
+      }
+      $(".next-supply").attr("data-id", categoryId)
       $.get("/categories/" + categoryId + ".json", function(data){
         console.log(data)
         $(".category-name").text(data["name"])
         /*got the supply to be the same category id as the category shown */
-        $("next-supply").attr("data-id", categoryId)
+        $(".supply-heading").text(data["supplies"]["name"])
         $(".next-category").attr("data-id", data["id"])
         $(".prev-category").attr("data-id", data["id"])
         /* need to have the supply change to the first supply of the new category*/
