--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -32,17 +32,20 @@
 
 <script type = "text/javascript" charset = "utf-8">
   $(function(){
+    var categoryId
     $(".next-category, .prev-category").on("click", function(){
       if($(this).attr("class") === "next-category"){
-        var categoryId = parseInt($(".next-category").attr("data-id")) + 1;
+        categoryId = parseInt($(".next-category").attr("data-id")) + 1;
       }
       else{
-        var categoryId = parseInt($(".prev-category").attr('data-id')) -1;
+        --categoryId ;
       }
       /*must disable button for previous/next on first and last elements*/
-  
+
       if(categoryId > 1){
         $('.prev-category').prop('disabled', false)
+      }else{
+          $('.prev-category').prop('disabled', true)
       }
       $(".next-supply").attr("data-id", categoryId)
       $.get("/categories/" + categoryId + ".json", function(data){
